[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/Player/PlayerCamera.gd" type="Script" id=1]
[ext_resource path="res://src/Level/World.gd" type="Script" id=2]
[ext_resource path="res://src/Level/AudioAnalyzer.gd" type="Script" id=3]
[ext_resource path="res://assets/music/generated synths.ogg" type="AudioStream" id=4]
[ext_resource path="res://src/Level/DinamicBackground.gd" type="Script" id=5]
[ext_resource path="res://src/Level/Background.gd" type="Script" id=10]
[ext_resource path="res://assets/flat/ground_color.png" type="Texture" id=17]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.463768, 1 )
colors = PoolColorArray( 1, 1, 1, 0.337255, 1, 1, 1, 0.262745, 1, 1, 1, 0.333333 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.163522, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.163522, 0.214527 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 10, 10, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 0.75
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 50.0
tangential_accel = 10.0
angle = 45.0
scale = 4.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Environment" id=6]
ambient_light_color = Color( 1, 1, 1, 1 )
glow_enabled = true
glow_strength = 1.36
glow_bloom = 0.11

[sub_resource type="BoxShape" id=7]
extents = Vector3( 25, 1, 5 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 25, 1, 5 )

[node name="World" type="Spatial"]
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 100 )
current = true
fov = 60.8
near = 10.0
far = 2000.0
script = ExtResource( 1 )

[node name="Background" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -150 )
script = ExtResource( 10 )

[node name="BackgroundSprite" type="Sprite3D" parent="Background"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 1, 0, 0, 0 )
modulate = Color( 2, 2, 2, 1 )
pixel_size = 1.0
texture = ExtResource( 17 )
script = ExtResource( 5 )

[node name="SpikeSpawnTimer" type="Timer" parent="Background"]

[node name="RegularPathTimer" type="Timer" parent="Background"]
wait_time = 0.65
autostart = true

[node name="AudioAnalyzer" type="AudioStreamPlayer" parent="Background"]
stream = ExtResource( 4 )
bus = "Analyze"
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="Background/AudioAnalyzer"]
wait_time = 0.009
autostart = true

[node name="SpawnPlayerTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="AirParticles" type="Particles2D" parent="."]
visible = false
amount = 1000
lifetime = 5.0
preprocess = 5.0
randomness = 0.35
local_coords = false
process_material = SubResource( 5 )

[node name="Center" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 17 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 6 )

[node name="Level walls" type="Spatial" parent="."]
transform = Transform( 0.99, 0, 0, 0, 0.99, 0, 0, 0, 1, 0, 0, 0 )

[node name="Ceiling" type="StaticBody" parent="Level walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, 0 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Level walls/Ceiling"]
shape = SubResource( 7 )

[node name="Floor" type="StaticBody" parent="Level walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -50, 0 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Level walls/Floor"]
shape = SubResource( 8 )

[node name="Left" type="StaticBody" parent="Level walls"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, -50, 0, 0 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Level walls/Left"]
shape = SubResource( 8 )

[node name="Right" type="StaticBody" parent="Level walls"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 50, 0, 0 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Level walls/Right"]
shape = SubResource( 8 )

[node name="MusicTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true
[connection signal="timeout" from="Background/SpikeSpawnTimer" to="Background" method="_on_SquareSpawnTimer_timeout"]
[connection signal="timeout" from="Background/RegularPathTimer" to="Background" method="_on_RegularPathTimer_timeout"]
[connection signal="high_beat" from="Background/AudioAnalyzer" to="Background" method="_on_AudioAnalyzer_high_beat"]
[connection signal="low_beat" from="Background/AudioAnalyzer" to="Background" method="_on_AudioAnalyzer_low_beat"]
[connection signal="middle_beat" from="Background/AudioAnalyzer" to="Background" method="_on_AudioAnalyzer_middle_beat"]
[connection signal="timeout" from="Background/AudioAnalyzer/Timer" to="Background/AudioAnalyzer" method="_on_Timer_timeout"]
[connection signal="timeout" from="SpawnPlayerTimer" to="." method="_on_SpawnPlayerTimer_timeout"]
[connection signal="timeout" from="MusicTimer" to="Background/AudioAnalyzer" method="_on_MusicTimer_timeout"]
[connection signal="timeout" from="MusicTimer" to="Background" method="_on_MusicTimer_timeout"]
